API Forgot password, change password and active user
